# gpt-translator

./: .gitignore  README.md  pyproject.toml
app/: main.py  utils.py
app/database/: crud.py  db.py  models.py  schemas.py
app/database/db/: sql_app.db
app/templates/: index.html  results.html
