[project]
name = "gpt-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "A to Z Tech Innovations, LLC",email = "dev@aztech.io"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "openai (==0.28.0)"
]

[tool.poetry]
packages = [{include = "gpt_translator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
